Add content css, update controller code by ajax, update UI

--- a/MRM/Views/ChildCampaign/ChildCampaign.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaign.cshtml
@@ -4,7 +4,9 @@
 }
 
 <div>
-    <form id="myform">
+@using (Html.BeginForm("ChildCampaign", "ChildCampaign", FormMethod.Post, new { id = "myform" }))
+{
+    <form>
 
         @*<div id="mydiv" data-ng-show="loading">
                 <div class="loader"></div>
@@ -20,17 +22,17 @@
                 <!-- /.box-header -->
                 <div class="box-body">
                     <fieldset>
-                        <legend>Child Campaign</legend>
+                        <legend>Sub Campaign</legend>
                         <div class="row">
                             <div class="col-md-6">
 
                                 <div class="form-group">
                                     <label>Master Campaign</label>
-                                    @Html.DropDownListFor(m => m.MasterCamPaignItems, new SelectList(Model.MasterCamPaignItems, "ID", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.MasterCamPaigns, new SelectList(Model.MasterCamPaigns, "Id", "Name"), new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>BG Led</label>
-                                    @Html.DropDownList("Status", new List<SelectListItem>
+                                    @Html.DropDownList("BGLed", new List<SelectListItem>
 
                  {
                     new SelectListItem{ Text="Yes", Value = "1" },
@@ -39,13 +41,13 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Business Group*</label>
-                                    @Html.DropDownListFor(m => m.BusinessGroupsItems, new SelectList(Model.BusinessGroupsItems, "ID", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.BusinessGroups, new SelectList(Model.BusinessGroups, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
                                     <label>Geography*</label>
 
-                                    @Html.DropDownListFor(m => m.GeographyItems, new SelectList(Model.GeographyItems, "ID", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.Geographys, new SelectList(Model.Geographys, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
@@ -57,7 +59,7 @@
                                 <div class="form-group">
                                     <label>Child Champaign Name*</label>
 
-                                    @Html.TextBoxFor(m => m.ChildChampaignName, new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
@@ -88,12 +90,12 @@
                                 <div class="form-group">
                                     <label>Segment*</label>
 
-                                    @Html.DropDownListFor(m => m.SegmentItems, new SelectList(Model.SegmentItems, "ID", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.Segments, new SelectList(Model.Segments, "Id", "Name"), new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Line*</label>
 
-                                    @Html.DropDownListFor(m => m.BusinessGroupsItems, new SelectList(Model.BusinessGroupsItems, "ID", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.BusinessLines, new SelectList(Model.BusinessLines, "Id", "Name"), new { @class = "form-control" })
 
                                 </div>
 
@@ -101,13 +103,13 @@
                                 <div class="form-group">
                                     <label>Industry*</label>
 
-                                    @Html.DropDownListFor(m => m.IndustryItems, new SelectList(Model.IndustryItems, "ID", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.Industries, new SelectList(Model.Industries, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
                                     <label>Theme</label>
 
-                                    @Html.DropDownListFor(m => m.ThemeItems, new SelectList(Model.ThemeItems, "ID", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.Themes, new SelectList(Model.Themes, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
@@ -140,30 +142,63 @@
                         </div>
 
                     </fieldset>
+                    <fieldset>
+                        <div class="row" style="padding-top:10px">
+                            <div class="col-md-6">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="col-md-3">
+                                    <input type="button" class="btn btn-block btn-primary btn-lg" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" />
+                                </div>
+                                <div class="col-md-3">
+                                    <button Id="btnsubmit" class="btn btn-block btn-primary btn-lg">Submit</button>
+
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
                     <!-- /.row -->
                 </div>
                 <!-- /.box-body -->
             </div>
 
-
-
-
-
-              <div class="row">
-                <div class="col-md-6">
-                </div>
-                <div class="col-md-6">
-                    <div class="col-md-3">
-                        <input type="button" class="btn btn-block btn-primary btn-lg" value="Submit" onclick="location.href='@Url.Action("ChildCampaign", "ChildCampaign")'" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="button" class="btn btn-block btn-primary btn-lg" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" />
-                    </div>
-                </div>
-            </div>
         </section>
     </form>
+}
 </div>
+
+<script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<link href="~/Content/datepicker3.css" rel="stylesheet" />
+<script src="~/Content/bootstrap-datepicker.js"></script>
+<script>
+
+$(document).ready(function () {
+    $("#btnsubmit").click(function (e) {
+        $.ajax({
+        type: 'post',
+        dataType: 'json',
+        url: 'http://localhost:53263/ChildCampaign/Save',
+        data: $("#myform").serialize(),
+        success: function (data) {
+            {
+                alert(data);
+            }
+    },
+});
+    });
+});
+
+
+
+$('#StartDate').datepicker({
+    autoclose: true
+});
+$('#EndDate').datepicker({
+    autoclose: true
+});
+</script>
+
 
 <style>
     fieldset {
