changes and adding services , update UI  and controller

--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -68,41 +68,37 @@
                         <legend>Master Campaign</legend>
                         <div class="row">
                             <div class="col-md-6">
-                                @*<div class="form-group">
+                                <div class="form-group">
                                     <label>Business Group</label>
-                                    @Html.DropDownListFor(x => x.BusinessGroups, new SelectList(Model.BusinessGroups, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(x => x.BusinessGroupViewModels, new SelectList(Model.BusinessGroupViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
                                     <label>Business Line</label>
-
-                                    @Html.DropDownListFor(m => m.BusinessLines, new SelectList(Model.BusinessLines, "Id", "Name"), new { @class = "form-control" })
-
+                                    @Html.DropDownListFor(m => m.BusinessGroupViewModels, new SelectList(Model.BusinessGroupViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
                                     <label>Segment</label>
 
-                                    @Html.DropDownListFor(m => m.Segments, new SelectList(Model.Segments, "Id", "Name"), new { @class = "form-control" })
-                                </div>*@
+                                    @Html.DropDownListFor(m => m.SegmentViewModels, new SelectList(Model.SegmentViewModels, "Id", "Name"), new { @class = "form-control" })
+                                </div>
 
                                 <div class="form-group">
                                     <label>Industry</label>
-
                                     @Html.DropDownListFor(m => m.IndustryViewModels, new SelectList(Model.IndustryViewModels, "Id", "Name"), new { @class = "form-control" })
-
                                 </div>
-                                @*<div class="form-group">
+                                <div class="form-group">
                                     <label>Theme</label>
 
-                                    @Html.DropDownListFor(m => m.Themes, new SelectList(Model.Themes, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.ThemeViewModels, new SelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "form-control" })
 
                                 </div>
                                 <div class="form-group">
                                     <label>Geography</label>
 
-                                    @Html.DropDownListFor(m => m.Geographys, new SelectList(Model.Geographys, "Id", "Name"), new { @class = "form-control" })
-                                </div>*@
+                                    @Html.DropDownListFor(m => m.GeographyViewModels, new SelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "form-control" })
+                                </div>
 
 
                             </div>
