--- a/MRM/Views/ChildCampaign/ChildCampaign.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaign.cshtml
@@ -1,4 +1,4 @@
-﻿@model MRM.Model.ChildCampaignVM
+﻿@model MRM.Model.ChildCampaignViewModel
 @{
     ViewBag.Title = "ChildCampaign";
 }
@@ -28,7 +28,7 @@
 
                                 <div class="form-group">
                                     <label>Master Campaign</label>
-                                    @Html.DropDownListFor(m => m.MasterCamPaigns, new SelectList(Model.MasterCamPaigns, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.MasterViewModels, new SelectList(Model.MasterViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>BG Led</label>
@@ -41,13 +41,13 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Business Group*</label>
-                                    @Html.DropDownListFor(m => m.BusinessGroups, new SelectList(Model.BusinessGroups, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.BusinessGroupViewModels, new SelectList(Model.BusinessGroupViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
                                     <label>Geography*</label>
 
-                                    @Html.DropDownListFor(m => m.Geographys, new SelectList(Model.Geographys, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.GeographyViewModels, new SelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
@@ -65,7 +65,7 @@
                                 <div class="form-group">
                                     <label>Child Champaign Description*</label>
 
-                                    @Html.TextBoxFor(m => m.ChildChampaignDescription, new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.CampaignDescription, new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Target New Pilpeline*</label>
@@ -90,12 +90,12 @@
                                 <div class="form-group">
                                     <label>Segment*</label>
 
-                                    @Html.DropDownListFor(m => m.Segments, new SelectList(Model.Segments, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.SegmentViewModels, new SelectList(Model.SegmentViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Line*</label>
 
-                                    @Html.DropDownListFor(m => m.BusinessLines, new SelectList(Model.BusinessLines, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.BusinessLineViewModels, new SelectList(Model.BusinessLineViewModels, "Id", "Name"), new { @class = "form-control" })
 
                                 </div>
 
@@ -103,13 +103,13 @@
                                 <div class="form-group">
                                     <label>Industry*</label>
 
-                                    @Html.DropDownListFor(m => m.Industries, new SelectList(Model.Industries, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.IndustryViewModels, new SelectList(Model.IndustryViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
                                     <label>Theme</label>
 
-                                    @Html.DropDownListFor(m => m.Themes, new SelectList(Model.Themes, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.ThemeViewModels, new SelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "form-control" })
                                 </div>
 
                                 <div class="form-group">
@@ -173,13 +173,15 @@
 <script src="~/Content/bootstrap-datepicker.js"></script>
 <script>
 
-$(document).ready(function () {
+    $(document).ready(function () {
+        var model={IndustryViewModels: $("#IndustryViewModels : selected").val()}
+
     $("#btnsubmit").click(function (e) {
         $.ajax({
         type: 'post',
         dataType: 'json',
         url: 'http://localhost:53263/ChildCampaign/Save',
-        data: $("#myform").serialize(),
+        data: json.stringfy(model),
         success: function (data) {
             {
                 alert(data);
